--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -375,7 +375,7 @@
 @navbar-default-link-color:                @gray-light;
 @navbar-default-link-hover-color:          @gray-base;
 @navbar-default-link-hover-bg:             @yellow;
-@navbar-default-link-active-color:         gray-base;
+@navbar-default-link-active-color:         @gray-base;
 @navbar-default-link-active-bg:            @yellow;
 @navbar-default-link-disabled-color:       #ccc;
 @navbar-default-link-disabled-bg:          transparent;
